# Copyright 2019 Google LLC
#
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

declare_args() {
  skia_enable_bwslib = true
}

import("../../../gn/skia.gni")

config("public_config") {
  if (skia_enable_bwslib) {
    include_dirs = [
      "./",
      "../src",
    ]
  }
}

static_library("BWSLib") {
  if (skia_enable_bwslib) {
    public_configs = [ ":public_config" ]
    include_dirs = [
      "//apps/happyhttp",
      "//third_party/externals/imgui",
      "//apps2/DecUI",
    ]
    if (is_win) {
      cflags = [ "-DWIN32" ]
      libs = [
        "setupapi.lib",
        "advapi32.lib",
        "ws2_32.lib",
        "mswsock.lib",
      ]
    }
    deps = [
      "../../..:skia",
      "//third_party/imgui",
      "//apps/sk_ui",   
    ]
    sources = [
      "AppLib.h",
      "AppLib.cpp",
      "../src/AppCreator.cpp",
      "../src/DecBWSLayer.cpp",
      "../src/DecBWS.cpp",
      "../src/DecBWSUI.cpp",
      "../src/DecBWSR2.cpp",
      "../src/DecBWSArrow.cpp",
      "../src/DecBWSInfoBox.cpp",
      "../src/DecBWSJoyStick.cpp",
    ]
    configs += [ "../../../:skia_private" ]
    if (skia_enable_tools) {
      configs += [ "../../../:our_vulkan_headers" ]
    }
  }
}
